[project]
name = "tmpy-crr"
version = "0.1.0"
description = "Small utility package for coordinate rotation/reflection (tmpy.crr)."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "TMR-Mark" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["find:"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
